--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Inter', sans-serif;
+  list-style: none;
+  color: var(--color-grey-100);
 }
 
 :root {
@@ -18,4 +24,26 @@
   --font-size-2: 1.75rem;
   --font-size-3: 1.25rem;
   --font-size-4: 1rem;
+}
+
+body{
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+}
+
+main{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.green{
+  color: var(--color-brand-100);
+}
+
+section{
+  width: 100%;
 }
