--- a/pages/home/styles/postFeed.css
+++ b/pages/home/styles/postFeed.css
@@ -1,10 +1,12 @@
 .feed{
     width: 100%;
+    height: fit-content;
     display: flex;
     margin: 46px 0;
     gap: 44px 0;
     flex-wrap: wrap;
     justify-content: space-between;
+    position: relative;
 }
 
 .card{
