--- a/pages/home/styles/header.css
+++ b/pages/home/styles/header.css
@@ -14,14 +14,6 @@
     gap: 50px;
 }
 
-.logo{
-    display: flex;
-    gap: 16px;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 150%;
-}
-
 .content{
     display: flex;
     flex-direction: column;
@@ -41,9 +33,15 @@
 }
 
 .content strong{
+    width: fit-content;
     font-weight: 600;
     font-size: 16px;
     line-height: 150%;
+    cursor: pointer;
+}
+
+.content strong:hover{
+    text-decoration: underline;
 }
 
 .leftImg{
